--- a/blogs/interior-design-inspiration.html
+++ b/blogs/interior-design-inspiration.html
@@ -1,5 +1,21 @@
-<img alt='pic' src='/images/blog/blog_pic5.JPG' />
+<style type="text/css">
+.blog .post .blog_post .blog_content {
+  -moz-column-count:2; /* Firefox */
+  -webkit-column-count:2; /* Safari and Chrome */
+  column-count:2; 
+  -moz-column-gap:2; /* Firefox */
+  -webkit-column-gap:2; /* Safari and Chrome */
+  column-gap:2;
+  margin: 30px 0;
+  padding: 0px 18px;
+}
+.blog .post .title-date  { margin-bottom: 30px; }
+.blog .post .blog_post { width: 100%; }
+.blog .post .blog_post h4 { display: inline; margin: 0 0 20px 0; }
+</style>
 
 <div class="blog_content">
   <p>I love interior design and today, I came across this designer's work. His name is <a _target = "_blank" href = "http://ryankorban.com/">Ryan Korban.</a> He has made quite a reputation for himself in the design world already, despite being only 26 years old. I find that his aesthetic is very much in line with what I aspire to do with my own living space. I absolutely love his collection of vintage and how he combines brass, antiques, books, plants, and modern sculptures. It just works. It's both feminine and masculine, clean, sophisticated, vintage, modern, and above all, gorgeous!</p>
 </div>
+
+<div class="image"><img alt='pic' src='/images/blog/blog_pic5.JPG' /></div>
