about slideshow complete

--- a/blogs/my-new-website.html
+++ b/blogs/my-new-website.html
@@ -3,5 +3,5 @@
   <p>You might recall my previous site having more pages and more personal content. This site will be more career oriented with the portfolio being the primary focus, followed by a very detailed about / resume page. I kept the blog page since I've grown used to writing and sharing my thoughts with anyone willing to read.</p>
   <p>Aesthetically, the site feels bigger, taking up more horizontal space. It's also somewhat minimalist with less color and less content.</p>
   <p>Click around and have a look. The about page lists numerous ways to get in touch, while the blog has facebook comments enabled for your convenience.</p> 
-  <p>Cheers.</p>
+  <p>Cheers!</p>
 </div>
