--- a/blogs/java.html
+++ b/blogs/java.html
@@ -17,7 +17,7 @@
 <div class="blog_content">
   <p>(Nerd alert!) <strong>Introduction to Java:</strong> complete! <strong>Intermediate Java:</strong> complete!</p>
   <p>Weekly courses from January through May got me these certificates. I'm also happy to report that I scored 95% and 94% on my finals!</p>
-  <p>The reason I did this was to get a basic understanding of the fundamentals of object oriented programming. Not sure that I want to take it further than 'Intermediate' but it was fun and the sense of accomplishment in completing these courses was a great feeling.</p>
+  <p>The reason I did this was to get a basic understanding of the fundamentals of object oriented programming. Not sure that I want to take it further than 'Intermediate' but it was fun and the sense of accomplishment having completed these courses was fantastic.</p>
 </div>
 
 <div class="image"><img alt='pic' src='/images/blog/blog_pic6.JPG' /></div>
