fix for broken images

--- a/blogs/java.html
+++ b/blogs/java.html
@@ -20,4 +20,4 @@
   <p>The reason I did this was to get a basic understanding of the fundamentals of object oriented programming. Not sure that I want to take it further than 'Intermediate' but it was fun and the sense of accomplishment having completed these courses was fantastic.</p>
 </div>
 
-<div class="image"><img alt='pic' src='/images/blog/blog_pic6.JPG' /></div>
+<div class="image"><img alt='pic' src='/images/blog/blog_pic6.jpg' /></div>
