--- a/blogs/october.html
+++ b/blogs/october.html
@@ -6,4 +6,4 @@
   <p>Here's a gorgeous view of Manarola, one of the Cinque Terres:</p>
 </div>
 
-<div class="image"><img alt='pic' src='/images/blog/blog_pic2.JPG' /></div>
+<div class="image"><img alt='pic' src='/images/blog/blog_pic2.jpg' /></div>
