--- a/blogs/september-wedding.html
+++ b/blogs/september-wedding.html
@@ -6,4 +6,4 @@
   <p>Many changes in the horizon.</p>
 </div>
 
-<div class="image"><img alt='pic' src='/images/blog/blog_pic3.JPG' /></div>
+<div class="image"><img alt='pic' src='/images/blog/blog_pic3.jpg' /></div>
