Portfolio page redesign plus some responsive stuff.

--- a/blogs/valentines.html
+++ b/blogs/valentines.html
@@ -16,8 +16,7 @@
 
 <div class="blog_content">
   <p>Turns out Ian has hidden talents.</p>
-  <p>Coincidentally, these talents reveal themselves during moments of relationship damage control, anniversaries, and Valentines Day. It's always a pleasant surprise to see what he will pull out of his sleeve, but that he strategically holds back -- not quite sure how I feel about that!</p>
-  <p>Sneaky Sneaky... </p>
+  <p>Coincidentally, these talents reveal themselves during moments of relationship damage control, or on special occasions, i.e. anniversaries, Valentines Day etc. It's always a pleasant surprise to see what he will pull out of his sleeve, but that he strategically holds back ...Sneaky Sneaky... </p>
   <p>This year, Valentine's Day exposed Ian's hidden talent for making Bok Choi Miso Soup with Dumplings, no assistance required. So I stood there, mouth agape, watching Ian put together a meal; the very same man who has trouble brewing a pot of coffee and who only ever visits the refrigerator to grab a beer (occasionally water).</p>
   <p>Luckily I thought to document this phenomenon. Here's Ian in action.</p>
 </div>
