Blog pages now responsive.

--- a/blogs/october.html
+++ b/blogs/october.html
@@ -1,4 +1,4 @@
-<div class="blog_content">
+<div class="blog_content narrow">
   <p>We went on our honeymoon, returned to Toronto to pack for our move to San Francisco, and I had a birthday.</p>
   <p>This month was far less stressful than September, though it was still hectic and I was definitely running around more than relaxing.</p>
   <p>Honeymoon was great! A bit too much running around trying not to miss trains and more walking / hiking than I would have liked but otherwise, we had a fantastic time. The best meals of my life were had in small towns like Riomaggiore (Cinque Terre), and bigger food obsessed cities like Bologna. It was romantic, fun, exciting, and absolutely breathtaking. We started our two week vacation in Rome, followed by Florence, Pisa, Cinque Terre, Venice, Bologna and back to Rome, full circle. Of all the places we visited, I absolutely loved Cinque Terre. Ian and I might just have to retire there. It's an incredible place with its quaint towns composed of colorful houses built on the mountain side facing the Mediterranean. It has lovely sunsets, amazing food, breathtaking views and nature.</p>
@@ -6,4 +6,4 @@
   <p>Here's a gorgeous view of Manarola, one of the Cinque Terres:</p>
 </div>
 
-<div class="image"><img alt='pic' src='/images/blog/blog_pic2.jpg' /></div>
+<div class="image narrow"><img alt='pic' src='/images/blog/blog_pic2.jpg' /></div>
