--- a/blogs/september-wedding.html
+++ b/blogs/september-wedding.html
@@ -1,4 +1,4 @@
-<div class="blog_content">
+<div class="blog_content narrow">
   <p>I got married on a mild september evening in Toronto!!</p>
   <p>My wedding was more perfect than I could have ever imagined. The planning, was a total nightmare, but that's to be expected when you don't know what you're doing!</p>  
   <p>Planning my wedding mostly on my own in 6 months was one of the most difficult things I've ever done. Major setbacks occurred, yet through some miracle it turned out beautifully! Though it could have gone ***muuuuuch*** smoother, my bridesmaids made it to the wedding just in time, my mother and aunt were there to attended to all my needs despite my bridezilla tendencies, and my family and friends arrived despite travel complications for those flying in.</p> 
@@ -6,4 +6,4 @@
   <p>Many changes in the horizon.</p>
 </div>
 
-<div class="image"><img alt='pic' src='/images/blog/blog_pic3.jpg' /></div>
+<div class="image narrow"><img alt='pic' src='/images/blog/blog_pic3.jpg' /></div>
