Updated blog stylings.

--- a/blogs/how-to-not-be-an-awesome-landlord.html
+++ b/blogs/how-to-not-be-an-awesome-landlord.html
@@ -1,20 +1,4 @@
-<style type="text/css">
-.blog .post .blog_post .blog_content {
-  -moz-column-count:2; /* Firefox */
-  -webkit-column-count:2; /* Safari and Chrome */
-  column-count:2; 
-  -moz-column-gap:2; /* Firefox */
-  -webkit-column-gap:2; /* Safari and Chrome */
-  column-gap:2;
-  margin: 30px 0;
-  padding: 0px 18px;
-}
-.blog .post .title-date  { margin-bottom: 30px; }
-.blog .post .blog_post { width: 100%; }
-.blog .post .blog_post h4 { display: inline; margin: 0 0 20px 0; }
-</style>
-
-<div class="blog_content">
+<div class="blog-content">
   <p>It doesn't take much. Just follow these simple steps and you'll be well on your way to being a shitty landlord.</p>
   <p>5. <strong>Fail to let your tenant know that their unit has one meter that is shared between 3 apartments</strong> - this will result in your tenant being at a total loss trying to understand why their gas bill is so high while spending needless time on the phone arguing with some idiot customer representative who insist on how normal it is to pay insane amounts.</p>
   <p>4. <strong>Give your tenant keys that don't actually work</strong> - that way, when they arrive at their front gate with a ton of groceries in each hand and find that the gate is locked for the first time ever, they can fumble around with their keys totally confused. They will be forced to buzz everyone in the building until someone answers and decides that they're not actually insane before letting them in.</p>
@@ -25,4 +9,4 @@
   <p>Here are some lovely pictures of my partially demolished stair case. I came home to this lovely surprise after a long day at work. Once again, I had to buzz all my neighbors until someone picked up. I had to explain the situation, let myself into their homes so that I could exit through their backdoor, from which I could access my apartment. Notice the bottom left picture. This is considered a "finished" job, despite missing planks here and there. Fun!!</p>
 </div>
 
-<div class="image"><img alt='my stairs' src='/images/blog/blog_pic7.jpg' /></div>
+<img class="image" alt='my stairs' src='/images/blog/blog_pic7.jpg' />
