--- a/blogs/valentines.html
+++ b/blogs/valentines.html
@@ -1,24 +1,8 @@
-<style type="text/css">
-.blog .post .blog_post .blog_content {
-  -moz-column-count:2; /* Firefox */
-  -webkit-column-count:2; /* Safari and Chrome */
-  column-count:2; 
-  -moz-column-gap:2; /* Firefox */
-  -webkit-column-gap:2; /* Safari and Chrome */
-  column-gap:2;
-  margin: 30px 0;
-  padding: 0px 18px;
-}
-.blog .post .title-date  { margin-bottom: 30px; }
-.blog .post .blog_post { width: 100%; }
-.blog .post .blog_post h4 { display: inline; margin: 0 0 20px 0; }
-</style>
-
-<div class="blog_content">
+<div class="blog-content">
   <p>Turns out Ian has hidden talents.</p>
   <p>Coincidentally, these talents reveal themselves during moments of relationship damage control, or on special occasions, i.e. anniversaries, Valentines Day etc. It's always a pleasant surprise to see what he will pull out of his sleeve, but that he strategically holds back ...Sneaky Sneaky... </p>
   <p>This year, Valentine's Day exposed Ian's hidden talent for making Bok Choi Miso Soup with Dumplings, no assistance required. So I stood there, mouth agape, watching Ian put together a meal; the very same man who has trouble brewing a pot of coffee and who only ever visits the refrigerator to grab a beer (occasionally water).</p>
   <p>Luckily I thought to document this phenomenon. Here's Ian in action.</p>
 </div>
 
-<div class="image"><img alt='my stairs' src='/images/blog/blog_pic8.jpg' /></div>
+<img class="image" alt='my stairs' src='/images/blog/blog_pic8.jpg' />
