--- a/blogs/java.html
+++ b/blogs/java.html
@@ -1,23 +1,7 @@
-<style type="text/css">
-.blog .post .blog_post .blog_content {
-  -moz-column-count:2; /* Firefox */
-  -webkit-column-count:2; /* Safari and Chrome */
-  column-count:2; 
-  -moz-column-gap:2; /* Firefox */
-  -webkit-column-gap:2; /* Safari and Chrome */
-  column-gap:2;
-  margin: 30px 0;
-  padding: 0px 18px;
-}
-.blog .post .title-date  { margin-bottom: 30px; }
-.blog .post .blog_post { width: 100%; }
-.blog .post .blog_post h4 { display: inline; margin: 0 0 20px 0; }
-</style>
+<img class="image" alt='pic' src='/images/blog/blog_pic6.jpg' />
 
-<div class="blog_content">
+<div class="blog-content">
   <p>(Nerd alert!) <strong>Introduction to Java:</strong> complete! <strong>Intermediate Java:</strong> complete!</p>
   <p>Weekly courses from January through May got me these certificates. I'm also happy to report that I scored 95% and 94% on my finals!</p>
   <p>The reason I did this was to get a basic understanding of the fundamentals of object oriented programming. Not sure that I want to take it further than 'Intermediate' but it was fun and the sense of accomplishment having completed these courses was fantastic.</p>
 </div>
-
-<div class="image"><img alt='pic' src='/images/blog/blog_pic6.jpg' /></div>
