--- a/blogs/my-new-website.html
+++ b/blogs/my-new-website.html
@@ -1,7 +1,6 @@
 <div class="blog-content">
   <p>Welcome to my new and improved site!</p>
-  <p>You might recall my previous site having more pages and more personal content. This site will be more career oriented with the portfolio being the primary focus, followed by a very detailed about / resume page. I kept the blog page since I've grown used to writing and sharing my thoughts with anyone willing to read.</p>
-  <p>Aesthetically, the site feels bigger, taking up more horizontal space. It's also somewhat minimalist with less color and less content.</p>
-  <p>Click around and have a look. The about page lists numerous ways to get in touch, while the blog has facebook comments enabled for your convenience.</p> 
+  <p>You might recall my previous site having more pages and more personal content. This site will be more focused on career. The About page is primarily a resume and the Portfolio page lists my works. I kept the blog page since I occasionally feel the need to share my thoughts with anyone willing to read.</p>
+  <p>Click around and have a look.</p> 
   <p>Cheers!</p>
 </div>
